Update logo SVG

--- a/src/components/ContentProjects.astro
+++ b/src/components/ContentProjects.astro
@@ -36,7 +36,7 @@ const projects: Project[] = [
       "Video game trading platform with a Node.js API and MySQL database, featuring a React front end with a trade map, calendar with events, and charts to track exchanges and game popularity.",
     link: {
       urlRepo: "https://github.com/dracudev/regame-app",
-      urlLive: "dracudev-regame.vercel.app/",
+      urlLive: "https://dracudev-regame.vercel.app/",
     },
   },
   {
