--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -20,11 +20,11 @@ const profile = {
     <Picture
       src={ProfilePicture}
       formats={["webp"]}
-      width={96}
-      height={96}
+      width={170}
+      height={170}
       alt={"Profile picture " + profile.name}
       title={profile.name}
-      class="w-24 h-24 rounded-xl object-cover border-2 border-primary mx-auto sm:mx-0"
+      class="w-50 h-50 rounded-full object-cover border-2 border-primary mx-auto sm:mx-0"
     />
 
     <div>
