--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -24,7 +24,7 @@ const profile = {
       height={170}
       alt={"Profile picture " + profile.name}
       title={profile.name}
-      class="w-50 h-50 rounded-full object-cover border-2 border-primary mx-auto sm:mx-0"
+      class="w-50 h-50 rounded-full object-cover border-4 border-primary mx-auto sm:mx-0 shadow-lg hover:scale-105 transition-transform duration-300 ease-in-out bg-gradient-to-r from-primary to-secondary p-1"
     />
 
     <div>
