Update profile images, and added CV download option

--- a/src/components/ContentProjects.astro
+++ b/src/components/ContentProjects.astro
@@ -24,10 +24,9 @@ const projects: Project[] = [
   {
     name: "Bel'Pom - Corporate Website",
     description:
-      "Corporate website for Bel'pom using Astro.js, React, TypeScript, and Tailwind CSS. Implementation of a modern, responsive interface to present company, product, and service information.",
+      "Corporate website for potato factory Bel'pom using Astro.js, TypeScript, and Tailwind CSS. Implementation of a modern, responsive interface to present the company, its products, and service information.",
     link: {
       urlRepo: "https://github.com/dracudev/belpom-web",
-      urlLive: "https://belpom-wep.vercel.app/",
     },
   },
   {
