--- a/src/components/SocialIcon.astro
+++ b/src/components/SocialIcon.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-  icon: "github" | "linkedIn" | "email";
+  icon: "github" | "linkedIn" | "email" | "download";
 }
 
 const { icon } = Astro.props as Props;
@@ -44,6 +44,7 @@ const { icon } = Astro.props as Props;
             <circle cx="4" cy="4" r="2" />
           </svg>
         );
+
       case "email":
         return (
           <svg
@@ -59,6 +60,20 @@ const { icon } = Astro.props as Props;
           >
             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
             <polyline points="22,6 12,13 2,6" />
+          </svg>
+        );
+
+      case "download":
+        return (
+          <svg
+            width="24"
+            height="24"
+            xmlns="http://www.w3.org/2000/svg"
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            fill="currentColor"
+          >
+            <path d="M3 24h19v-23h-1v22h-18v1zm17-24h-18v22h18v-22zm-1 1h-16v20h16v-20zm-2 16h-12v1h12v-1zm0-3h-12v1h12v-1zm0-3h-12v1h12v-1zm-7.348-3.863l.948.3c-.145.529-.387.922-.725 1.178-.338.257-.767.385-1.287.385-.643 0-1.171-.22-1.585-.659-.414-.439-.621-1.04-.621-1.802 0-.806.208-1.432.624-1.878.416-.446.963-.669 1.642-.669.592 0 1.073.175 1.443.525.221.207.386.505.496.892l-.968.231c-.057-.251-.177-.449-.358-.594-.182-.146-.403-.218-.663-.218-.359 0-.65.129-.874.386-.223.258-.335.675-.335 1.252 0 .613.11 1.049.331 1.308.22.26.506.39.858.39.26 0 .484-.082.671-.248.187-.165.322-.425.403-.779zm3.023 1.78l-1.731-4.842h1.06l1.226 3.584 1.186-3.584h1.037l-1.734 4.842h-1.044z" />
           </svg>
         );
 
