--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,13 +41,12 @@ import ContentExperience from "../components/ContentExperience.astro";
           <input type="radio" id="tab4" name="tabs" class="tab-radio" />
 
           <!-- Start: Tab bar -->
-          <div class="flex bg-black border-b border-gray-600 sticky top-0 z-10">
+          <div
+            class="flex bg-black border-b border-gray-600 sticky top-0 z-10 overflow-x-auto whitespace-nowrap"
+          >
             <ContentLink contentId="tab1" contentName="about.ts" />
-
             <ContentLink contentId="tab2" contentName="projects.md" />
-
             <ContentLink contentId="tab3" contentName="experience.css" />
-
             <ContentLink contentId="tab4" contentName="education.json" />
           </div>
           <!-- End: Tab bar -->
