Refine profile description for clarity and update profile picture dimensions

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -9,7 +9,7 @@ const profile = {
   description:
     "Front-End developer focused on creating dynamic web applications with React, TypeScript, and Tailwind, taking care of every detail to ensure clean, scalable, and efficient code.",
   description2:
-    "I also have a background in digital marketing and UX, so I understand the importance of not only developing applications that work well, but also offer an intuitive and optimized user experience.",
+    "I also have a background in digital marketing and UX, which underscores the importance of developing applications that not only work effectively but also provide an intuitive and optimized user experience.",
 };
 ---
 
@@ -24,7 +24,7 @@ const profile = {
       height={170}
       alt={"Profile picture " + profile.name}
       title={profile.name}
-      class="w-50 h-50 rounded-full object-cover border-2 border-primary mx-auto sm:mx-0 shadow-lg hover:scale-105 transition-transform duration-300 ease-in-out"
+      class="w-48 h-48 rounded-full object-cover mx-auto sm:mx-0 shadow-lg hover:scale-110 transition-transform duration-300 ease-in-out"
     />
 
     <div>
