--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ import ContentExperience from "../components/ContentExperience.astro";
           <!-- End: Tab bar -->
 
           <!-- Start: Tab content -->
-          <div class="p-6 flex-grow overflow-y-auto bg-black">
+          <div class="p-6 flex-grow overflow-y-auto z-1 bg-black">
             <!-- Start: About content -->
             <div id="content1" class="tab-content">
               <ContentCode />
