--- a/src/components/layout/BaseLayout.astro
+++ b/src/components/layout/BaseLayout.astro
@@ -22,7 +22,12 @@ interface Props {
   canonicalURL?: string;
 }
 
-const { title, description, image = "/default-og-image.jpg", canonicalURL = Astro.url } = Astro.props;
+const {
+  title,
+  description,
+  image = "/default-og-image.jpg",
+  canonicalURL = Astro.url,
+} = Astro.props;
 ---
 
 <!doctype html>
@@ -34,10 +39,34 @@ const { title, description, image = "/default-og-image.jpg", canonicalURL = Astr
     <meta name="description" content={description} />
 
     <!-- Preload critical fonts -->
-    <link rel="preload" href={interLightWoff2} as="font" type="font/woff2" crossorigin="anonymous" />
-    <link rel="preload" href={interRegularWoff2} as="font" type="font/woff2" crossorigin="anonymous" />
-    <link rel="preload" href={interMediumWoff2} as="font" type="font/woff2" crossorigin="anonymous" />
-    <link rel="preload" href={robotoMonoRegularWoff2} as="font" type="font/woff2" crossorigin="anonymous" />
+    <link
+      rel="preload"
+      href={interLightWoff2}
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href={interRegularWoff2}
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href={interMediumWoff2}
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href={robotoMonoRegularWoff2}
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
 
     <link rel="canonical" href={canonicalURL} />
 
@@ -85,5 +114,9 @@ const { title, description, image = "/default-og-image.jpg", canonicalURL = Astr
       <main><slot /></main>
     </main>
     <div class="bottom-glow" transition:persist></div>
+    <script
+      is:inline
+      src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"
+    ></script>
   </body>
 </html>
