feat: update BaseLayout title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,10 @@ if (!siteConfig) {
 const site = siteConfig.data;
 ---
 
-<BaseLayout title={`${site.name} - Portfolio`} description={site.introduction}>
+<BaseLayout
+  title={`dracudev | Javier Andreu | Front-End Developer`}
+  description={site.introduction}
+>
   <Container>
     <section class="hero">
       <h1>{site.name}</h1>
