feat: update project titles to include 'dracudev |' prefix

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -26,7 +26,7 @@ const sortedProjects = projects.sort((a: Project, b: Project) => {
 ---
 
 <BaseLayout
-  title="Projects"
+  title="dracudev | Projects"
   description="Crafted with code to solve real problems"
 >
   <Container>
