--- a/src/pages/projects/[tech].astro
+++ b/src/pages/projects/[tech].astro
@@ -44,7 +44,7 @@ const tech = Astro.params.tech;
 ---
 
 <BaseLayout
-  title={`${tech} Projects`}
+  title={`dracudev | ${tech} Projects`}
   description={`Projects built with ${tech}`}
 >
   <Container>
