--- a/src/pages/education/index.astro
+++ b/src/pages/education/index.astro
@@ -1,17 +1,15 @@
 ---
 import { getCollection } from "astro:content";
-import type { CollectionEntry } from "astro:content";
 import BaseLayout from "../../components/layout/BaseLayout.astro";
 import BaseHero from "../../components/shared/BaseHero.astro";
 import Container from "../../components/ui/Container.astro";
-
-type Education = CollectionEntry<"education">;
+import TimeLine from "../../components/ui/TimeLine";
 
 const education = await getCollection("education");
 ---
 
 <BaseLayout
-  title="Education"
+  title="dracudev | Education"
   description="A look at my educational journey and learning experiences"
 >
   <Container>
@@ -19,5 +17,7 @@ const education = await getCollection("education");
       title="Education"
       description="A look at my educational journey and learning experiences"
     />
+
+    <TimeLine items={education} />
   </Container>
 </BaseLayout>
