--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -7,6 +7,7 @@ import Categories from "../../components/shared/Categories.astro";
 import BaseHero from "../../components/shared/BaseHero.astro";
 import Container from "../../components/ui/Container.astro";
 import ContentList from "../../components/shared/ContentList.astro";
+import { getProjectOGImages } from "../../utils/og-image-cache.ts";
 
 type Project = CollectionEntry<"projects">;
 
@@ -23,6 +24,9 @@ const sortedProjects = projects.sort((a: Project, b: Project) => {
   if (!a.data.featured && b.data.featured) return 1;
   return a.data.title.localeCompare(b.data.title);
 });
+
+// Get cached OG images for all projects
+const ogImages = await getProjectOGImages();
 ---
 
 <BaseLayout
@@ -50,6 +54,7 @@ const sortedProjects = projects.sort((a: Project, b: Project) => {
             description={project.data.description}
             url={project.data.url ?? ""}
             tags={project.data.techs}
+            image={project.data.url ? ogImages[project.data.url] : null}
           />
         ))
       }
